--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,13 @@ before_install:
 script:
   # - docker run USERNAME/docker-react npm run test -- --coverage
   - docker run -e CI=true mchoi3000/docker-react npm run test
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-west-2"
+  app: "docker-react"
+  env: "DockerReact-env"
+  bucket_name: "elasticbeanstalk-us-west-2-206645836867"
+  bucket_path: "docker-react"
+  on:
+    branch: master
