--- a/.travis.yml
+++ b/.travis.yml
@@ -10,16 +10,16 @@ script:
   # - docker run USERNAME/docker-react npm run test -- --coverage
   - docker run -e CI=true mchoi3000/docker-react npm run test
 
-deploy:
-  provider: elasticbeanstalk
-  region: "us-west-2"
-  app: "docker-react"
-  env: "DockerReact-env"
-  bucket_name: "elasticbeanstalk-us-west-2-206645836867"
-  bucket_path: "docker-react"
-  on:
-    branch: master
-  access_key_id:
-    secure: "$AWS_ACCESS_KEY"
-  secret_access_key:
-    secure: "$AWS_SECRET_KEY"
+# deploy:
+#   provider: elasticbeanstalk
+#   region: "us-west-2"
+#   app: "docker-react"
+#   env: "DockerReact-env"
+#   bucket_name: "elasticbeanstalk-us-west-2-206645836867"
+#   bucket_path: "docker-react"
+#   on:
+#     branch: master
+#   access_key_id:
+#     secure: "$AWS_ACCESS_KEY"
+#   secret_access_key:
+#     secure: "$AWS_SECRET_KEY"
